# homeslice

./: .bumpversion.cfg  .gitignore  HISTORY.txt  LICENSE  MANIFEST.in  Pipfile  README.md  flit.ini  homeslice.py  justfile  pyproject.toml  setup.cfg  setup.py
homeslice/: __init__.py  cli.py  dircontext.py  environments.py  git.py  pep508checker.py  symlink.py  utils.py
homeslice/commands/: cmd_clone.py  cmd_config.py  cmd_link.py  cmd_list.py  cmd_pull.py  cmd_remove.py  cmd_unlink.py
pyhome/: symlink.py
src/: homeslice.py
tests/: test_homeslice.py
