[project]
name = "homeslice"
version = "0.1.0"
description = "dotfiles and pizza management"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Jeff Triplett", email = "jeff.triplett@gmail.com" }
]
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: System Administrators",
    "Topic :: System :: Installation/Setup",
    "Topic :: System :: Systems Administration",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "tomli-w>=1.0.0",
    "typer>=0.9.0",
]

[project.urls]
Homepage = "https://github.com/jefftriplett/homeslice"
Repository = "https://github.com/jefftriplett/homeslice"

[project.scripts]
homeslice = "homeslice:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.sdist]
include = ["src/homeslice.py", "README.md", "pyproject.toml"]
