[metadata]
name = homeslice
author = Jeff Triplett
author_email = jeff.triplett@gmail.com
description = dotfiles and :pizza: management
license = MIT
license_file = file:LICENSE
long_description = file:README.md
url = https://github.com/jefftriplett/homeslice
version = homesick.__version__
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: End Users/Desktop
    Intended Audience :: System Administrators
    Topic :: System :: Installation/Setup
    Topic :: System :: Systems Administration
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[bdist_wheel]
universal=1

[options]
include_package_data = true
install_requires =
    click
    click-log
    click_completion
    crayons
packages =
    homeslice
    homeslice.commands
python_requires = >=3.6
setup_requires =
    setuptools >= 38.3.0

[options.entry_points]
console_scripts =
    homeslice = homeslice:cli
